--- a/ui/package.json
+++ b/ui/package.json
@@ -6,6 +6,9 @@
     "@apollo/client": "^3.5.9",
     "@auth0/auth0-react": "^1.8.0",
     "@babel/preset-typescript": "^7.16.7",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
+    "@mui/material": "^5.9.2",
     "@reduxjs/toolkit": "^1.7.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
@@ -14,8 +17,8 @@
     "@types/jest-axe": "^3.5.3",
     "@types/mixpanel-browser": "^2.38.0",
     "@types/node": "^12.20.38",
-    "@types/react": "^16.14.21",
-    "@types/react-dom": "^16.9.14",
+    "@types/react": "^18.0.15",
+    "@types/react-dom": "^18.0.6",
     "@types/react-helmet": "6.1.5",
     "@types/react-redux": "^7.1.21",
     "@types/react-router": "^5.1.18",
@@ -25,7 +28,7 @@
     "@typescript-eslint/parser": "^5.8.0",
     "airtable": "^0.11.4",
     "clsx": "^1.1.1",
-    "connected-react-router": "^6.9.2",
+    "connected-react-router": "^6.9.3",
     "eslint": "^8.5.0",
     "eslint-plugin-import": "^2.25.3",
     "eslint-plugin-jest": "^25.3.0",
@@ -36,23 +39,25 @@
     "graphql": "^16.3.0",
     "jest-axe": "^5.0.1",
     "jest-junit": "^13.0.0",
-    "konva": "^8.3.2",
+    "konva": "^8.3.10",
     "mixpanel-browser": "^2.45.0",
     "prettier": "^2.5.1",
-    "react": "^17.0.2",
+    "react": "^18.2.0",
     "react-dnd": "^14.0.5",
     "react-dnd-html5-backend": "^14.1.0",
-    "react-dom": "^17.0.2",
+    "react-dom": "^18.2.0",
     "react-error-boundary": "^3.1.4",
     "react-full-page": "^0.1.12",
-    "react-helmet-async": "^1.2.2",
+    "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.22.5",
-    "react-konva": "^17.0.2-5",
+    "react-konva": "^18.2.1",
     "react-modal": "^3.14.4",
     "react-query": "^3.39.1",
     "react-redux": "^7.2.6",
     "react-router": "^5.2.0",
-    "react-scripts": "5.0.0",
+    "react-router-dom": "^5.3.3",
+    "react-scripts": "5.0.1",
+    "redux-first-history": "^5.0.12",
     "redux-logger": "^3.0.6",
     "redux-thunk-error-handler": "^1.1.4",
     "redux-undo": "^1.0.1",
@@ -85,6 +90,7 @@
   "devDependencies": {
     "@testing-library/react-hooks": "^7.0.2",
     "@types/react-modal": "^3.13.1",
+    "@types/react-router-dom": "^5.3.3",
     "canvas": "^2.9.0",
     "eslint-config-prettier": "^8.3.0"
   },
